--- a/ai-fabric-2tier.yaml
+++ b/ai-fabric-2tier.yaml
@@ -343,6 +343,8 @@ topology:
     # FE Nokia Fabric
     - endpoints: [ 2tier-feleaf-01:ethernet-1/31, 2tier-fespine-01:ethernet-1/1 ]
     - endpoints: [ 2tier-feleaf-02:ethernet-1/31, 2tier-fespine-01:ethernet-1/2 ]
+    - endpoints: [ 2tier-feleaf-01:ethernet-1/32, 2tier-fespine-01:ethernet-1/3 ]
+    - endpoints: [ 2tier-feleaf-02:ethernet-1/32, 2tier-fespine-01:ethernet-1/4 ]
 
     # FE Nokia-Juniper
     - endpoints: [ 2tier-fespine-01:ethernet-1/31, 2tier-juniper:eth1 ]
