--- a/connector-clab-manifests/topolink-interfaces.yaml
+++ b/connector-clab-manifests/topolink-interfaces.yaml
@@ -1312,6 +1312,29 @@ spec:
 apiVersion: interfaces.eda.nokia.com/v1alpha1
 kind: Interface
 metadata:
+  name: 2tier-feleaf-01-ethernet-1-32
+  namespace: ai-fabric-fe
+  labels:
+    eda.nokia.com/role: interSwitch
+spec:
+  enabled: true
+
+  ethernet:
+    stormControl:
+      enabled: false
+  lldp: true
+  members:
+    - enabled: true
+      interface: ethernet-1-32
+      lacpPortPriority: 32768
+      node: 2tier-feleaf-01
+  type: interface
+  description: 'interSwitch link to 2tier-fespine-01'
+
+---
+apiVersion: interfaces.eda.nokia.com/v1alpha1
+kind: Interface
+metadata:
   name: 2tier-fespine-01-ethernet-1-1
   namespace: ai-fabric-fe
   labels:
@@ -1326,6 +1349,29 @@ spec:
   members:
     - enabled: true
       interface: ethernet-1-1
+      lacpPortPriority: 32768
+      node: 2tier-fespine-01
+  type: interface
+  description: 'interSwitch link to 2tier-feleaf-01'
+
+---
+apiVersion: interfaces.eda.nokia.com/v1alpha1
+kind: Interface
+metadata:
+  name: 2tier-fespine-01-ethernet-1-3
+  namespace: ai-fabric-fe
+  labels:
+    eda.nokia.com/role: interSwitch
+spec:
+  enabled: true
+
+  ethernet:
+    stormControl:
+      enabled: false
+  lldp: true
+  members:
+    - enabled: true
+      interface: ethernet-1-3
       lacpPortPriority: 32768
       node: 2tier-fespine-01
   type: interface
@@ -1358,6 +1404,29 @@ spec:
 apiVersion: interfaces.eda.nokia.com/v1alpha1
 kind: Interface
 metadata:
+  name: 2tier-feleaf-02-ethernet-1-32
+  namespace: ai-fabric-fe
+  labels:
+    eda.nokia.com/role: interSwitch
+spec:
+  enabled: true
+
+  ethernet:
+    stormControl:
+      enabled: false
+  lldp: true
+  members:
+    - enabled: true
+      interface: ethernet-1-32
+      lacpPortPriority: 32768
+      node: 2tier-feleaf-02
+  type: interface
+  description: 'interSwitch link to 2tier-fespine-01'
+
+---
+apiVersion: interfaces.eda.nokia.com/v1alpha1
+kind: Interface
+metadata:
   name: 2tier-fespine-01-ethernet-1-2
   namespace: ai-fabric-fe
   labels:
@@ -1372,6 +1441,29 @@ spec:
   members:
     - enabled: true
       interface: ethernet-1-2
+      lacpPortPriority: 32768
+      node: 2tier-fespine-01
+  type: interface
+  description: 'interSwitch link to 2tier-feleaf-02'
+
+---
+apiVersion: interfaces.eda.nokia.com/v1alpha1
+kind: Interface
+metadata:
+  name: 2tier-fespine-01-ethernet-1-4
+  namespace: ai-fabric-fe
+  labels:
+    eda.nokia.com/role: interSwitch
+spec:
+  enabled: true
+
+  ethernet:
+    stormControl:
+      enabled: false
+  lldp: true
+  members:
+    - enabled: true
+      interface: ethernet-1-4
       lacpPortPriority: 32768
       node: 2tier-fespine-01
   type: interface
