--- a/connector-clab-manifests/topolinks.yaml
+++ b/connector-clab-manifests/topolinks.yaml
@@ -823,6 +823,26 @@ kind: TopoLink
 metadata:
   labels:
     eda.nokia.com/role: interSwitch
+  name: 2tier-feleaf-01-e1-32-2tier-fespine-01-e1-3
+  namespace: ai-fabric-fe
+spec:
+  links:
+    - local:
+        interface: ethernet-1-32
+        interfaceResource: 2tier-feleaf-01-ethernet-1-32
+        node: 2tier-feleaf-01
+      remote:
+        interface: ethernet-1-3
+        interfaceResource: 2tier-fespine-01-ethernet-1-3
+        node: 2tier-fespine-01
+      type: interSwitch
+
+---
+apiVersion: core.eda.nokia.com/v1
+kind: TopoLink
+metadata:
+  labels:
+    eda.nokia.com/role: interSwitch
   name: 2tier-feleaf-02-e1-31-2tier-fespine-01-e1-2
   namespace: ai-fabric-fe
 spec:
@@ -834,6 +854,26 @@ spec:
       remote:
         interface: ethernet-1-2
         interfaceResource: 2tier-fespine-01-ethernet-1-2
+        node: 2tier-fespine-01
+      type: interSwitch
+
+---
+apiVersion: core.eda.nokia.com/v1
+kind: TopoLink
+metadata:
+  labels:
+    eda.nokia.com/role: interSwitch
+  name: 2tier-feleaf-02-e1-32-2tier-fespine-01-e1-4
+  namespace: ai-fabric-fe
+spec:
+  links:
+    - local:
+        interface: ethernet-1-32
+        interfaceResource: 2tier-feleaf-02-ethernet-1-32
+        node: 2tier-feleaf-02
+      remote:
+        interface: ethernet-1-4
+        interfaceResource: 2tier-fespine-01-ethernet-1-4
         node: 2tier-fespine-01
       type: interSwitch
 
