split BE server interfaces from 1x800 to 2x400

--- a/ai-fabric-2tier.yaml
+++ b/ai-fabric-2tier.yaml
@@ -309,37 +309,52 @@ topology:
     - endpoints: [ 2tier-bespine-01:ethernet-1/40, 2tier-beleaf-02:ethernet-1/40 ]
 
     # BE Leaf 01 to GPU Servers
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/1, 2tier-gpu-svr-01:eth1 ]
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/2, 2tier-gpu-svr-01:eth2 ]
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/3, 2tier-gpu-svr-01:eth3 ]
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/4, 2tier-gpu-svr-01:eth4 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/1/1, 2tier-gpu-svr-01:eth1 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/1/2, 2tier-gpu-svr-01:eth2 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/2/1, 2tier-gpu-svr-01:eth3 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/2/2, 2tier-gpu-svr-01:eth4 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/3/1, 2tier-gpu-svr-01:eth5 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/3/2, 2tier-gpu-svr-01:eth6 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/4/1, 2tier-gpu-svr-01:eth7 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/4/2, 2tier-gpu-svr-01:eth8 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/5/1, 2tier-gpu-svr-02:eth1 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/5/2, 2tier-gpu-svr-02:eth2 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/6/1, 2tier-gpu-svr-02:eth3 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/6/2, 2tier-gpu-svr-02:eth4 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/7/1, 2tier-gpu-svr-02:eth5 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/7/2, 2tier-gpu-svr-02:eth6 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/8/1, 2tier-gpu-svr-02:eth7 ]
+    - endpoints: [ 2tier-beleaf-01:ethernet-1/8/2, 2tier-gpu-svr-02:eth8 ]
 
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/5, 2tier-gpu-svr-02:eth1 ]
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/6, 2tier-gpu-svr-02:eth2 ]
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/7, 2tier-gpu-svr-02:eth3 ]
-    - endpoints: [ 2tier-beleaf-01:ethernet-1/8, 2tier-gpu-svr-02:eth4 ]
 
     # BE Leaf 02 to GPU Servers
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/1, 2tier-gpu-svr-01:eth5 ]
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/2, 2tier-gpu-svr-01:eth6 ]
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/3, 2tier-gpu-svr-01:eth7 ]
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/4, 2tier-gpu-svr-01:eth8 ]
-
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/5, 2tier-gpu-svr-02:eth5 ]
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/6, 2tier-gpu-svr-02:eth6 ]
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/7, 2tier-gpu-svr-02:eth7 ]
-    - endpoints: [ 2tier-beleaf-02:ethernet-1/8, 2tier-gpu-svr-02:eth8 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/1/1, 2tier-gpu-svr-01:eth9 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/1/2, 2tier-gpu-svr-01:eth10 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/2/1, 2tier-gpu-svr-01:eth11 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/2/2, 2tier-gpu-svr-01:eth12 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/3/1, 2tier-gpu-svr-01:eth13 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/3/2, 2tier-gpu-svr-01:eth14 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/4/1, 2tier-gpu-svr-01:eth15 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/4/2, 2tier-gpu-svr-01:eth16 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/5/1, 2tier-gpu-svr-02:eth9 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/5/2, 2tier-gpu-svr-02:eth10 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/6/1, 2tier-gpu-svr-02:eth11 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/6/2, 2tier-gpu-svr-02:eth12 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/7/1, 2tier-gpu-svr-02:eth13 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/7/2, 2tier-gpu-svr-02:eth14 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/8/1, 2tier-gpu-svr-02:eth15 ]
+    - endpoints: [ 2tier-beleaf-02:ethernet-1/8/2, 2tier-gpu-svr-02:eth16 ]
 
     # GPU Server1 FE connections
-    - endpoints: [ 2tier-feleaf-01:ethernet-1/1, 2tier-gpu-svr-01:eth9 ]
-    - endpoints: [ 2tier-feleaf-02:ethernet-1/1, 2tier-gpu-svr-01:eth10 ]
-    - endpoints: [ 2tier-feleaf-01:ethernet-1/3, 2tier-gpu-svr-01:eth11 ]
-    - endpoints: [ 2tier-feleaf-02:ethernet-1/3, 2tier-gpu-svr-01:eth12 ]
+    - endpoints: [ 2tier-feleaf-01:ethernet-1/1, 2tier-gpu-svr-01:eth17 ]
+    - endpoints: [ 2tier-feleaf-02:ethernet-1/1, 2tier-gpu-svr-01:eth18 ]
+    - endpoints: [ 2tier-feleaf-01:ethernet-1/3, 2tier-gpu-svr-01:eth19 ]
+    - endpoints: [ 2tier-feleaf-02:ethernet-1/3, 2tier-gpu-svr-01:eth20 ]
     # GPU Server2 FE connections
-    - endpoints: [ 2tier-feleaf-01:ethernet-1/2, 2tier-gpu-svr-02:eth9 ]
-    - endpoints: [ 2tier-feleaf-02:ethernet-1/2, 2tier-gpu-svr-02:eth10 ]
-    - endpoints: [ 2tier-feleaf-01:ethernet-1/4, 2tier-gpu-svr-02:eth11 ]
-    - endpoints: [ 2tier-feleaf-02:ethernet-1/4, 2tier-gpu-svr-02:eth12 ]
+    - endpoints: [ 2tier-feleaf-01:ethernet-1/2, 2tier-gpu-svr-02:eth17 ]
+    - endpoints: [ 2tier-feleaf-02:ethernet-1/2, 2tier-gpu-svr-02:eth18 ]
+    - endpoints: [ 2tier-feleaf-01:ethernet-1/4, 2tier-gpu-svr-02:eth19 ]
+    - endpoints: [ 2tier-feleaf-02:ethernet-1/4, 2tier-gpu-svr-02:eth20 ]
     # FE Nokia Fabric
     - endpoints: [ 2tier-feleaf-01:ethernet-1/31, 2tier-fespine-01:ethernet-1/1 ]
     - endpoints: [ 2tier-feleaf-02:ethernet-1/31, 2tier-fespine-01:ethernet-1/2 ]
