--- a/eda_manifests_2tier/BE/configlets/interfaces.yaml
+++ b/eda_manifests_2tier/BE/configlets/interfaces.yaml
@@ -18,7 +18,7 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/1/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
   - config: |
       {
         "learn-unsolicited": "both",
@@ -32,7 +32,7 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/1/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
   - config: |
       {
         "learn-unsolicited": "both",
@@ -46,7 +46,7 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/3"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/2/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
   - config: |
       {
         "learn-unsolicited": "both",
@@ -60,7 +60,7 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/4"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/2/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
   - config: |
       {
         "learn-unsolicited": "both",
@@ -74,7 +74,7 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/5"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/3/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
   - config: |
       {
         "learn-unsolicited": "both",
@@ -88,7 +88,7 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/6"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/3/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
   - config: |
       {
         "learn-unsolicited": "both",
@@ -102,7 +102,7 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/7"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/4/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
   - config: |
       {
         "learn-unsolicited": "both",
@@ -116,7 +116,119 @@ spec:
         }
       }
     operation: Create
-    path: .interface{.name=="ethernet-1/8"}.subinterface{.index==1}.ipv6.neighbor-discovery
+    path: .interface{.name=="ethernet-1/4/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/5/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/5/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/6/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/6/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/7/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/7/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/8/1"}.subinterface{.index==1}.ipv6.neighbor-discovery
+  - config: |
+      {
+        "learn-unsolicited": "both",
+        "host-route": {
+          "populate": [
+            {
+              "route-type": "dynamic",
+              "datapath-programming": true
+            }
+          ]
+        }
+      }
+    operation: Create
+    path: .interface{.name=="ethernet-1/8/2"}.subinterface{.index==1}.ipv6.neighbor-discovery
   endpoints:
   - 2tier-beleaf-01
   - 2tier-beleaf-02
