--- a/connector-clab-manifests/artifacts.yaml
+++ b/connector-clab-manifests/artifacts.yaml
@@ -8,3 +8,25 @@ spec:
   remoteFileUrl:
     fileUrl: "https://github.com/nokia-eda/schema-profiles/releases/download/nokia-srl-25.7.2/srlinux-25.7.2-266.zip"
   repo: clab-schemaprofiles
+---
+apiVersion: artifacts.eda.nokia.com/v1
+kind: Artifact
+metadata:
+  name: srlinux-ghcr-25.10.1
+  namespace: eda-system
+spec:
+  filePath: srlinux-25.10.1.zip
+  remoteFileUrl:
+    fileUrl: https://github.com/nokia-eda/schema-profiles/releases/download/nokia-srl-25.10.1/srlinux-25.10.1-399.zip
+  repo: schemaprofiles
+---
+apiVersion: artifacts.eda.nokia.com/v1
+kind: Artifact
+metadata:
+  name: llm-db-srlinux-ghcr-25.10.1
+  namespace: eda-system
+spec:
+  filePath: llm-embeddings-srl-25-10-1.tar.gz
+  remoteFileUrl:
+    fileUrl: https://github.com/nokia-eda/llm-embeddings/releases/download/nokia-srl-25.10.1/llm-embeddings-srl-25-10-1-v1.tar.gz
+  repo: llm-dbs
