--- a/connector-clab-manifests/node-profiles-fe.yaml
+++ b/connector-clab-manifests/node-profiles-fe.yaml
@@ -9,12 +9,8 @@ spec:
   annotate: true
   operatingSystem: srl
   version: 25.7.2
-
   versionPath: .system.information.version
-
-
   versionMatch: v25\.7\.2.*
-
   yang: https://eda-asvr.eda-system.svc/eda-system/clab-schemaprofiles/clab-srlinux-25.7.2/srlinux-25.7.2.zip
   nodeUser: admin
   onboardingPassword: NokiaSrl1!
@@ -22,6 +18,26 @@ spec:
   images:
   - image: fake.bin
     imageMd5: fake.bin.md5
-
-
   llmDb: https://eda-asvr.eda-system.svc/eda-system/llm-dbs/llm-db-srlinux-ghcr-25.7.2/llm-embeddings-srl-25.7.2.tar.gz
+---
+apiVersion: core.eda.nokia.com/v1
+kind: NodeProfile
+metadata:
+  labels:
+  name: ai-fabric-2tier-srlinux-25.10.1
+  namespace: ai-fabric-fe
+spec:
+  annotate: true
+  images:
+    - image: not-needed
+      imageMd5: not-needed
+  llmDb: https://eda-asvr.eda-system.svc/eda-system/llm-dbs/llm-db-srlinux-ghcr-25.10.1/llm-embeddings-srl-25-10-1.tar.gz
+  nodeUser: admin
+  onboardingPassword: NokiaSrl1!
+  onboardingUsername: admin
+  operatingSystem: srl
+  port: 57410
+  version: 25.10.1
+  versionMatch: v25\.10\.1.*
+  versionPath: .system.information.version
+  yang: https://eda-asvr.eda-system.svc/eda-system/schemaprofiles/srlinux-ghcr-25.10.1/srlinux-25.10.1.zip
